corrected text placement on mobile view

--- a/styles.css
+++ b/styles.css
@@ -131,9 +131,14 @@
   
 }
 
+.fsd {
+    display: none;
+}
+
 @media (max-width: 1200px){
 
     .bigbend-text {
+        border: 1px solid white;
         font-size: 6rem;
         line-height: 75px;
         margin-right: 10px;
@@ -143,6 +148,7 @@
     }
 
     .mobile {
+        border: 1px solid white;
         font-size: 2.5rem;
         color: #F9F8EB;
         font-weight: 500;
@@ -154,6 +160,16 @@
         margin-top: -220px;
         align-self: flex-start;
         margin-right: 10px;
+        display: none;
+    }
+
+    .fsd {
+        display:contents;
+        line-height: 1px;
+        margin-top: -100px;;
+        font-size: 2.5rem;
+        color: #F9F8EB;
+        letter-spacing: 4.5px;
     }
 
     
